prereq-cft.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Cloudformation template to launch the prerequisite required for the DNA workshop
Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

Resources:
  DnaWorkshopVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        -
          Key: Name
          Value: DnaWorkshopSourceDB
  RDSSubNet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DnaWorkshopVPC
      Tags:
        -
          Key: Name
          Value: DnaWorkshopRDS1
  EC2SubNet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DnaWorkshopVPC
      Tags:
        -
          Key: Name
          Value: DnaWorkshopEC2
  RDSSubNet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DnaWorkshopVPC
      Tags:
        -
          Key: Name
          Value: DnaWorkshopRDS2
  DnaWorkshopIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        -
          Key: Name
          Value: DnaWorkshopIGW
  DnaWorkshopDHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: ec2.internal
      DomainNameServers:
        - AmazonProvidedDNS
  DnaWorkshopRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DnaWorkshopVPC
      Tags:
        -
          Key: Name
          Value: DnaWorkshopRT
  DnaWorkshopInstance:
    Type: AWS::EC2::Instance
    Properties:
      DisableApiTermination: false
      InstanceInitiatedShutdownBehavior: stop
      EbsOptimized: true
      ImageId: !Ref LatestAmiId
      InstanceType: t3.2xlarge
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum install -y postgresql
          yum install -y git
          yum update -y
          cd /home/ec2-user
          DIR="aws-database-migration-samples"
          if [ ! -d "$DIR" ]; then
              git clone https://github.com/aws-samples/aws-database-migration-samples.git
          fi
          cd aws-database-migration-samples/PostgreSQL/sampledb/v1/
          export PGPASSWORD=admin123
          export ENDPOINT=${RDSDnaWorkshopDB.Endpoint.Address}

          nohup psql --host=${!ENDPOINT} --port=5432 --dbname=sportstickets --username=adminuser -f install-postgresql.sql
      Monitoring: false
      Tags:
        -
          Key: Name
          Value: DnaWorkshopEC2
      NetworkInterfaces:
        -
          DeleteOnTermination: true
          Description: 'Primary network interface'
          DeviceIndex: '0'
          SubnetId: !Ref EC2SubNet
          PrivateIpAddresses:
            -
              PrivateIpAddress: 10.0.0.40
              Primary: true
          GroupSet:
            -
              !Ref DnaWorkshopSG
          AssociatePublicIpAddress: true
  RDSDnaWorkshopDB:
    Type: AWS::RDS::DBInstance
    DependsOn: InternetRoute
    Properties:
      AllocatedStorage: '500'
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      DBInstanceClass: db.t2.2xlarge
      DBInstanceIdentifier: DnaWorkshopinstance
      Port: '5432'
      PubliclyAccessible: true
      StorageType: gp2
      BackupRetentionPeriod: 7
      MasterUsername: adminuser
      MasterUserPassword: admin123
      PreferredBackupWindow: 04:00-04:30
      PreferredMaintenanceWindow: sun:05:20-sun:05:50
      DBName: sportstickets
      Engine: postgres
      EngineVersion: '11.14'
      LicenseModel: postgresql-license
      DBSubnetGroupName: !Ref DnaWorkshopDefaultDBSubnet
      DBParameterGroupName: !Ref DnaWorkshopDBPG
      VPCSecurityGroups:
        - !Ref DnaWorkshopDBSG
      Tags:
        -
          Key: workload-type
          Value: other
  DnaWorkshopDefaultDBSubnet:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Created from the RDS Management Console
      SubnetIds:
        - !Ref RDSSubNet
        - !Ref EC2SubNet
        - !Ref RDSSubNet2
  DnaWorkshopDBPG:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: Parameter for Ticket RedshiftDatabaseName
      Family: postgres11
      Parameters:
        rds.logical_replication: '1'
        wal_sender_timeout: '0'
        max_wal_senders: '20'
        max_replication_slots: '50'
  DnaWorkshopSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 Security Group
      VpcId: !Ref DnaWorkshopVPC
  DnaWorkshopDBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS Security Group
      VpcId: !Ref DnaWorkshopVPC
      Tags:
        -
          Key: Name
          Value: DnaWorkshopRDS-SG
  DnaWorkshopGWAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DnaWorkshopVPC
      InternetGatewayId: !Ref DnaWorkshopIGW
  SubnetRoute1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DnaWorkshopRouteTable
      SubnetId: !Ref RDSSubNet2
  SubnetRoute2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DnaWorkshopRouteTable
      SubnetId: !Ref RDSSubNet
  SubnetRoute3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DnaWorkshopRouteTable
      SubnetId: !Ref EC2SubNet
  InternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref DnaWorkshopRouteTable
      GatewayId: !Ref DnaWorkshopIGW
    DependsOn: DnaWorkshopGWAttachement
  DHCPAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref DnaWorkshopVPC
      DhcpOptionsId: !Ref DnaWorkshopDHCPOptions
  SGIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DnaWorkshopSG
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref DnaWorkshopSG
  SGIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DnaWorkshopDBSG
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref DnaWorkshopSG
  SGIngress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DnaWorkshopDBSG
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      CidrIp: 0.0.0.0/0
  SGEgress1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref DnaWorkshopSG
      IpProtocol: '-1'
      CidrIp: 0.0.0.0/0
  SGEgress2:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref DnaWorkshopDBSG
      IpProtocol: '-1'
      CidrIp: 0.0.0.0/0
Outputs:
  DnaWorkshopEndpoint:
    Description: DMS Instance Endpoint
    Value: !GetAtt RDSDnaWorkshopDB.Endpoint.Address
